# Schnee

./: .gitignore  CMakeLists.txt  README.md  SCHNEE_MAIN  schnee_main.cpp  schnee_test.cpp
core/: schnee_main.cpp  schnee_test.cpp
schnee/inc/: cloud.h  edge.h  file_loader.h  file_saver.h  kruskal.h  marching_cubes.h  mesh.h  orientationfixer.h  plane.h  point_cloud.h  schnee.h  vector.h
schnee/src/: cloud.cpp  file_loader.cpp  file_saver.cpp  kruskal.cpp  marching_cubes.cpp  orientationfixer.cpp  point_cloud.cpp  vector.cpp
sources/: schnee_main.cpp
src/: schnee.cpp
